--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form>
         <label for="name"> Name</label> <br>
         <input type="text" id="name"> <br>
-        <input type="button" value="Get Results">
+        <input id = button type="button" value="Get Results">
         <p id="gender"></p>
         <p id= "age"></p>
         <p id="nationality"></p>
