revise fetch javascript

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
@@ -15,9 +16,9 @@
         <label for="name"> Name</label> <br>
         <input type="text" id="name"> <br>
         <input id = button type="button" value="Get Results">
-        <p id="gender"></p>
-        <p id= "age"></p>
-        <p id="nationality"></p>
+        <p id="gender" class="results">1</p>
+        <p id= "age" class="results"></p>
+        <p id="nationality" class="results"></p>
     </form>
     
 <script src ="index.js"></script>
