display api info on html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <label for="name"> Name</label> <br>
         <input type="text" id="name"> <br>
         <input id = button type="button" value="Get Results">
-        <p id="gender" class="results">1</p>
+        <p id="gender" class="results"></p>
         <p id= "age" class="results"></p>
         <p id="nationality" class="results"></p>
     </form>
