add dog img api to javascript

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <label for="name"> Name</label> <br>
         <input type="text" id="name"> <br>
         <input id = button type="button" value="Get Results">
-        <p id="gender" class="results"></p>
-        <p id= "age" class="results"></p>
-        <p id="nationality" class="results"></p>
+        <p id="gender"></p>
+        <p id= "age"></p>
+        <p id="nationality"></p>
     </form>
     
-<script src ="index.js"></script>
+    <script src ="index.js"></script>
 </body>
 </html>
