--- a/index.html
+++ b/index.html
@@ -5,22 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
 
-    <h1 id="hh">Find your info here</h1>
+    <h1>The Origin Predictor Site</h1>
+    <section class="hero">
+        <h2>About us:</h2>
+        <p>We created this algorithm to predicate your 
+            ethnicty based on your</p>
+    </section>
+    <section class="content">
 
-    <form>
-        <label for="name"> Name</label> <br>
-        <input type="text" id="name"> <br>
-        <input id = button type="button" value="Get Results">
-        <p id="gender"></p>
-        <p id= "age"></p>
-        <p id="nationality"></p>
-    </form>
-    
+        <section class="results">results
+            <form class="formy">
+                <label for="name"> Name</label> <br>
+                <input type="text" id="name"> <br>
+                <input id = button type="button" value="Get Results">
+                <p id="gender"></p>
+                <p id= "age"></p>
+                <p id="nationality"></p>
+            </form>
+        </section>
+        <section id = "dog" class="dog"></section>
+    </section>
+    <section class="footer">Our other sites</section>
     <script src ="index.js"></script>
 </body>
 </html>
