change html content layout

--- a/index.html
+++ b/index.html
@@ -16,21 +16,39 @@
         <p>We created this algorithm to predicate your 
             ethnicty based on your</p>
     </section>
+
     <section class="content">
 
-        <section class="results">results
+        <section class="description_container">
+            <h3>Start Here</h3>
+            <p>Project Description :</p>
+            <ul>
+                <li>Test</li>
+                <li>Test1</li>
+                <li>Test2</li>
+            </ul>
+        </section>
+        <section class="results_container">
+            <h3>Test the program!</h3>
             <form class="formy">
-                <label for="name"> Name</label> <br>
-                <input type="text" id="name"> <br>
+                <label for="name"> Name</label> 
+                <input type="text" id="name">
                 <input id = button type="button" value="Get Results">
-                <p id="gender"></p>
-                <p id= "age"></p>
-                <p id="nationality"></p>
+                <h3>Your Results</h3>
+                <p id="gender" class="results"></p>
+                <p id= "age" class="results"></p>
+                <p id="nationality" class="results"></p>
             </form>
         </section>
-        <section id = "dog" class="dog"></section>
+        <section id = "dog" class="dog">
+            <h3>Dog Picture of the Day:</h3>
+        </section>
     </section>
-    <section class="footer">Our other sites</section>
+
+    <section class="footer">
+        <h2>Our other sites</h2>
+    </section>
+
     <script src ="index.js"></script>
 </body>
 </html>
