style html elements with css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <h1>The Origin Predictor Site</h1>
     <section class="hero">
         <h2>About us:</h2>
-        <p>We created this algorithm to predicate your 
-            ethnicty based on your</p>
+        <p> We are university students and this was planned 
+            to be a small assignment but we decided to make it public.
+            Enjoy the program (especially the dog pictures).</p>
     </section>
 
     <section class="content">
@@ -22,27 +23,34 @@
         <section class="description_container">
             <h3>Start Here</h3>
             <p>Project Description :</p>
+            <p>A program that gives you a gender,
+                 age and predicted nationality from a name.</p> <br>
+            <p>Project Steps :</p> <br>
             <ul>
-                <li>Test</li>
-                <li>Test1</li>
-                <li>Test2</li>
+                <li>Write a first name or last name.</li>
+                <li>Press the get results button. </button></li>
+                <li>Wait for the results content to be filled out.</li>
+                <li>Please do make sure not to overload the test.</li>
             </ul>
         </section>
+
         <section class="results_container">
             <h3>Test the program!</h3>
             <form class="formy">
                 <label for="name"> Name</label> 
                 <input type="text" id="name">
-                <input id = button type="button" value="Get Results">
-                <h3>Your Results</h3>
-                <p id="gender" class="results"></p>
-                <p id= "age" class="results"></p>
-                <p id="nationality" class="results"></p>
+                <input id = button type="button" value="Get Results"> 
+                <h3>Your Results:</h3>
+                <span>Gender:</span><p id="gender" class="results">Test1</p>
+                <span>Age:</span><p id= "age" class="results">Test2</p>
+                <span>Nationality:</span><p id="nationality" class="results">Test3</p>
             </form>
         </section>
+
         <section id = "dog" class="dog">
-            <h3>Dog Picture of the Day:</h3>
+            <h3> Dog Picture of the Day:</h3>
         </section>
+
     </section>
 
     <section class="footer">
