add comments and fix code layout

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 </head>
 
 <body>
-
+    <!-- Header -->
     <h1>The Origin Predictor Site</h1>
+    <!-- Hero Section -->
     <section class="hero">
         <h2>About us:</h2>
         <p> We are university students and this was planned 
-            to be a small assignment but we decided to make it public.
+            to be a small assignment but, we decided to make it public.
             Enjoy the program (especially the dog pictures).</p>
     </section>
-
+    <!-- Main Content Section -->
     <section class="content">
-
+        <!-- Project Description -->
         <section class="description_container">
             <h3>Start Here</h3>
             <p>Project Description :</p>
@@ -33,7 +34,7 @@
                 <li>Please do make sure not to overload the test.</li>
             </ul>
         </section>
-
+        <!-- Test and Results Section -->
         <section class="results_container">
             <h3>Test the program!</h3>
             <form class="formy">
@@ -46,17 +47,15 @@
                 <span>Nationality:</span><p id="nationality" class="results">Test3</p>
             </form>
         </section>
-
+        <!-- Randomized Dog Image Section -->
         <section id = "dog" class="dog">
             <h3> Dog Picture of the Day:</h3>
         </section>
-
     </section>
-
+    <!-- Footer -->
     <section class="footer">
         <h2>Our other sites</h2>
     </section>
-
     <script src ="index.js"></script>
 </body>
 </html>
